--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
 </head>
 
 <body>
-   <div class="search-bar" id="cotizador">
+  <!--  <div class="search-bar" id="cotizador">
       <i class="fa fa-close"></i>
       <form class="search-bar-fixed"  method="GET" >
          <input class="form-control form-name" name="name" id="name" placeholder="Nombre del proyecto" type="text" required="">
@@ -77,7 +77,7 @@
          <button class="btn btn-primary" tw-mt-30 type="submit"><i class="fa fa-send"> </i>Solicitar cotización</button>
          </div>
       </form>
-   </div>
+   </div> -->
    <!--End Search bar -->
 
  <div class="offcanvas-menu">
@@ -185,7 +185,7 @@
                        <ul class="navbar-nav">
                      
                      <!-- End Dropdown -->
-                     <li class="nav-item"><a class="nav-link" href="portafolio.html">Portafolio</a></li>
+                     <li class="nav-item"><a class="nav-link" href="portafolio/portfolio.html">Portafolio</a></li>
                      <!-- End Dropdown -->
                      <li class="nav-item dropdown">
                         <a class="nav-link" style="cursor: pointer;" data-toggle="dropdown">
@@ -216,10 +216,10 @@
                     <!-- End of navbar collapse -->
 
                     <div class="tw-off-search d-none d-lg-inline-block">
-                       <div class="tw-search">
+                       <!-- <div class="tw-search">
                          <i class="fa fa-envelope-open-o "></i>
                          </a>
-                        </div>
+                        </div> -->
                         <div class="tw-menu-bar-default tw-menu-bar" id="open-button">
                             <span></span>
                             <span></span>
@@ -388,7 +388,7 @@
                            <span class="animate-border border-black"></span>
                         </div>
                         <ul>
-                           <li><a href="portafolio.html">Portafolio</a></li>
+                           <li><a href="portafolio/portfolio.html">Portafolio</a></li>
                         </ul>
                         
                      </div>
