--- a/infor.html
+++ b/infor.html
@@ -52,20 +52,13 @@
 
    <!--Responsive CSS -->
    <link rel="stylesheet" href="css/responsive.css">
-<!-- 
- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
-   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-   <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-      <![endif]-->
+
 
 
 </head>
 
 <body>
-   <div class="search-bar" id="cotizador">
+   <!-- <div class="search-bar" id="cotizador">
       <i class="fa fa-close"></i>
       <form class="search-bar-fixed" action="index.html#">
          <input class="form-control form-name" name="name" id="name" placeholder="Nombre del proyecto" type="text" required="">
@@ -78,7 +71,7 @@
          <button class="btn btn-primary" tw-mt-30 type="submit"><i class="fa fa-send"> </i>Solicitar cotización</button>
          </div>
       </form>
-   </div>
+   </div> -->
    <!--End Search bar -->
 
    <div class="offcanvas-menu">
@@ -93,7 +86,7 @@
                      </a>
                      <p align="left">Equipo creativo dedicado al diseño y desarrollo de páginas web personalizadas. Portafolios, Landing-page, e-comerce, catálogos y más.</p>
                      <div class="row">
-                     <!--    <div class="col-md-12">
+                        <div class="col-md-12">
                            <div class="contact-us">
                               <div class="contact-icon">
                                  <i class="icon icon-map2"></i>
@@ -106,7 +99,7 @@
                           
                            </div>
                            
-                        </div> -->
+                        </div>
                         <!-- End Col -->
                         <div class="col-md-12">
                                  <a href="tel:584147529202">
@@ -216,10 +209,10 @@
                     <!-- End of navbar collapse -->
 
                     <div class="tw-off-search d-none d-lg-inline-block">
-                       <div class="tw-search">
+                       <!-- <div class="tw-search">
                          <i class="fa fa-envelope-open-o "></i>
                          </a>
-                        </div>
+                        </div> -->
                         <div class="tw-menu-bar-default tw-menu-bar" id="open-button">
                             <span></span>
                             <span></span>
