--- a/portafolio/portfolio.html
+++ b/portafolio/portfolio.html
@@ -52,7 +52,7 @@
 						<div class="sub-menu-column smfull">
 							<ul>
 								<li><a href="../team.html">Nuestro Equipo</a> </li>
-								<li><a href="../contact.htm">Contacto</a> </li>
+								<li><a href="../contact.html">Contacto</a> </li>
 								
 							</ul>
 						</div>
@@ -180,7 +180,7 @@
 <li data-filter="*" class="is-checked">Todo</li>
 <li data-filter=".app">Aplicaciones</li>
 <li data-filter=".website">Paginas web</li>
-<li data-filter=".graphic">Logos</li>
+<!-- <li data-filter=".graphic">Logos</li> -->
 </ul>
 </div>
 </div>
