--- a/portafolio/ventiluz.html
+++ b/portafolio/ventiluz.html
@@ -171,7 +171,7 @@
                   <i class="fas fa-calendar-alt"></i>
                   <p>Fecha de creación: <span>May 2021</span></p>
                 </li>
-                <li><a href="https://www.ventiluz-servicios.com" target="_black">Visitar sitio web</a></li>
+                <li><a href="https://www.buckapi.com/ventiluz/" target="_black">Visitar sitio web</a></li>
               </ul>
             </div>
           </div>
