--- a/team.html
+++ b/team.html
@@ -47,13 +47,13 @@
 </head>
 
 <body>
-   <div class="search-bar">
+   <!-- <div class="search-bar">
       <i class="fa fa-close"></i>
       <form class="search-bar-fixed" action="team.html#">
          <input type="text" placeholder="search...">
          <button type="submit"><i class="fa fa-search"></i></button>
       </form>
-   </div>
+   </div> -->
    <!--End Search bar -->
 
    <div class="offcanvas-menu">
@@ -68,7 +68,7 @@
                      </a>
                      <p align="left">Equipo creativo dedicado al diseño y desarrollo de páginas web personalizadas. Portafolios, Landing-page, e-comerce, catálogos y más.</p>
                      <div class="row">
-                     <!--    <div class="col-md-12">
+                        <div class="col-md-12">
                            <div class="contact-us">
                               <div class="contact-icon">
                                  <i class="icon icon-map2"></i>
@@ -81,7 +81,7 @@
                           
                            </div>
                            
-                        </div> -->
+                        </div>
                         <!-- End Col -->
                         <div class="col-md-12">
                                  <a href="tel:584147529202">
@@ -191,10 +191,10 @@
                     <!-- End of navbar collapse -->
 
                     <div class="tw-off-search d-none d-lg-inline-block">
-                       <div class="tw-search">
+                      <!--  <div class="tw-search">
                          <i class="fa fa-envelope-open-o "></i>
                          </a>
-                        </div>
+                        </div> -->
                         <div class="tw-menu-bar-default tw-menu-bar" id="open-button">
                             <span></span>
                             <span></span>
