--- a/admin.html
+++ b/admin.html
@@ -58,7 +58,7 @@
 </head>
 
 <body>
-   <div class="search-bar" id="cotizador">
+   <!-- <div class="search-bar" id="cotizador">
       <i class="fa fa-close"></i>
       <form class="search-bar-fixed" action="index.html#">
          <input class="form-control form-name" name="name" id="name" placeholder="Nombre del proyecto" type="text" required="">
@@ -71,7 +71,7 @@
          <button class="btn btn-primary" tw-mt-30 type="submit"><i class="fa fa-send"> </i>Solicitar cotización</button>
          </div>
       </form>
-   </div>
+   </div> -->
    <!--End Search bar -->
 
 <div class="offcanvas-menu">
@@ -211,10 +211,10 @@
                     <!-- End of navbar collapse -->
 
                     <div class="tw-off-search d-none d-lg-inline-block">
-                       <div class="tw-search">
+                     <!--   <div class="tw-search">
                          <i class="fa fa-envelope-open-o "></i>
                          </a>
-                        </div>
+                        </div> -->
                         <div class="tw-menu-bar-default tw-menu-bar" id="open-button">
                             <span></span>
                             <span></span>
