--- a/portafolio/planing.html
+++ b/portafolio/planing.html
@@ -170,7 +170,7 @@
                   <i class="fas fa-calendar-alt"></i>
                   <p>Fecha de creación: <span>Junio 2021</span></p>
                 </li>
-                <li><a href="https://www.planingltda.cl" target="_black">Visitar sitio web</a></li>
+                <li><a href="http://planningltda.cl/" target="_black">Visitar sitio web</a></li>
               </ul>
             </div>
           </div>
