--- a/portafolio/portfolio.html
+++ b/portafolio/portfolio.html
@@ -180,7 +180,7 @@
 <li data-filter="*" class="is-checked">Todo</li>
 <li data-filter=".app">Aplicaciones</li>
 <li data-filter=".website">Paginas web</li>
-<!-- <li data-filter=".graphic">Logos</li> -->
+<li data-filter=".graphic">Logos</li>
 </ul>
 </div>
 </div>
@@ -297,6 +297,66 @@
 			<h4><a href="planing.html" target="_blanck">PlanningLTDA</a></h4>
 			<p>Pagina web Portafolio profesional</p>
 			<strong>Chile</strong>
+			</div>
+			</div>
+		</div>
+		<div class="col-lg-4 col-sm-6 single-card-item graphic">
+			<div class="isotope_item hover-scale">
+			<div class="item-image">
+			<a href="#"><img src="images/portfolio/app-img2.jpg" alt="image" class="img-fluid"/> </a>
+			</div>
+			<div class="item-info">
+			<h4>Frutmesuper</h4>
+			<p>Logo</p>
+			<!-- <strong>Chile</strong> -->
+			</div>
+			</div>
+		</div>
+		<div class="col-lg-4 col-sm-6 single-card-item graphic">
+			<div class="isotope_item hover-scale">
+			<div class="item-image">
+			<a href="#"><img src="images/portfolio/app-img1.jpg" alt="image" class="img-fluid"/> </a>
+			</div>
+			<div class="item-info">
+			<h4>Dr. yogur</h4>
+			<p>Logo</p>
+			<!-- <strong>Chile</strong> -->
+			</div>
+			</div>
+		</div>
+		<div class="col-lg-4 col-sm-6 single-card-item graphic">
+			<div class="isotope_item hover-scale">
+			<div class="item-image">
+			<a href="#"><img src="images/portfolio/app-img12.jpg" alt="image" class="img-fluid"/> </a>
+			</div>
+			<div class="item-info">
+			<h4>Dulce momento</h4>
+			<p>Logo</p>
+			<!-- <strong>Chile</strong> -->
+			</div>
+			</div>
+		</div>
+		<div class="col-lg-4 col-sm-6 single-card-item graphic">
+			<div class="isotope_item hover-scale">
+			<div class="item-image">
+			<a href="#"><img src="images/portfolio/app-img13.jpg" alt="image" class="img-fluid"/> </a>
+			</div>
+			<div class="item-info">
+			<h4>Maruma</h4>
+			<p>Logo</p>
+			<!-- <strong>Chile</strong> -->
+			</div>
+			</div>
+		</div>
+		<div class="col-lg-4 col-sm-6 single-card-item graphic">
+			<div class="isotope_item hover-scale">
+			<div class="item-image">
+			<a href="#"><img src="images/portfolio/app-img14.jpg" alt="image" class="img-fluid"/> </a>
+			</div>
+			<div class="item-info">
+			<h4>Ventiluz-servicios</h4>
+			<p>Logo</p>
+			<!-- <strong>Chile</strong> -->
 			</div>
 			</div>
 		</div>
