--- a/portafolio/portfolio.html
+++ b/portafolio/portfolio.html
@@ -2,7 +2,7 @@
 <html lang="en" class="no-js">
 	<head>
 		<meta charset="utf-8"/>
-		<title>BUCKAPI | Desarrollo web</title>
+		<title>BUCKAPI | Agencia creativa digital</title>
    		<meta name="description" content="Diseño y desarrollo web">
    		<meta name="keywords" content="profesional, portfolio, Website, desing, developer, html, css, content, ecommerce, CMS"> 
 		<meta name="viewport" content="width=device-width,initial-scale=1">
@@ -133,37 +133,7 @@
 			</nav>
 		</div>
 	</header>
-<!--Mobile contact-->
-<!-- <div class="popup-modal1">
-<div class="modal" id="menu-popup">
-<div class="modal-dialog">
-<div class="modal-content">
-<div class="modal-header">
-<div class="common-heading">
-<h4 class="mt0 mb0">Escribir mensaje</h4>
-</div>
-<button type="button" class="closes" data-dismiss="modal">&times;</button></div>
 
-<div class="modal-body">
-<div class="form-block fdgn2 mt10 mb10">
-<form action="#" method="post" name="feedback-form">
-<div class="fieldsets row">
-<div class="col-md-12"><input type="text" placeholder="Full Name" name="name"></div>
-<div class="col-md-12"><input type="email" placeholder="Email Address" name="email"></div>
-<div class="col-md-12"><input type="number" placeholder="Contact Number" name="phone"></div>
-<div class="col-md-12"><input type="text" placeholder="Subject" name="subject"></div>
-<div class="col-md-12"><textarea placeholder="Message" name="message"></textarea></div>
-</div>
-<div class="fieldsets mt20 pb20">
-<button type="submit" name="submit" class="lnk btn-main bg-btn" data-dismiss="modal">Submit <i class="fas fa-chevron-right fa-icon"></i><span class="circle"></span></button>
-</div>
-</form>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div> -->
 
 <!--Start Portfolio-->
 <section class="portfolio-page pad-tb">
@@ -180,7 +150,7 @@
 <li data-filter="*" class="is-checked">Todo</li>
 <li data-filter=".app">Aplicaciones</li>
 <li data-filter=".website">Paginas web</li>
-<li data-filter=".graphic">Logos</li>
+<!-- <li data-filter=".graphic">Logos</li> -->
 </ul>
 </div>
 </div>
@@ -193,23 +163,25 @@
 			<a href="biker.html" target="_blanck"><img src="images/portfolio/bikertours.jpg" alt="image" class="img-fluid"/> </a>
 			</div>
 			<div class="item-info">
-			<h4><a href="biker.html">Bikertours</a></h4>
-			<p>Pagina web</p>
-			<strong>Mexico</strong>
+			<h4><a href="biker.html">Motogo</a></h4>
+			<p>Landing web</p>
+			<strong>Venezuela</strong>
+			<strong><a href="https://www.buckapiservices.com/motogo/" style="color:black;" target="_black">Visitar</a></strong>
 			</div>
 			</div>
 		</div>
 		<div class="col-lg-4 col-sm-6 single-card-item app">
-		<div class="isotope_item hover-scale">
-		<div class="item-image">
-		<a href="pwa.html"><img src="images/portfolio/image-11.jpg" alt="portfolio" class="img-fluid"/> </a>
-		</div>
-		<div class="item-info">
-		<h4><a href="https://www.frutmesuper.com/" target="_black">FrutmeSuper</a></h4>
-		<p>PWA, e-commerce</p>
-		<strong>Venezuela</strong>
-		</div>
-		</div>
+			<div class="isotope_item hover-scale">
+			<div class="item-image">
+			<a href="pwa.html"><img src="images/portfolio/image-11.jpg" alt="portfolio" class="img-fluid"/> </a>
+			</div>
+			<div class="item-info">
+			<h4><a href="https://www.frutmesuper.com/" target="_black">FrutmeSuper</a></h4>
+			<p>PWA, e-commerce</p>
+			<strong>Venezuela</strong>
+			<strong><a href="https://www.frutmesuper.com/" style="color:black;" target="_blanck">Visitar</a></strong>
+			</div>
+			</div>
 		</div>
 		<div class="col-lg-4 col-sm-6 single-card-item app">
 			<div class="isotope_item hover-scale">
@@ -218,11 +190,41 @@
 			</div>
 			<div class="item-info">
 			<h4><a href="https://penguinscleaning.ca/" target="_blanck" >Penguins cleaning</a></h4>
+			<strong><a href="https://penguinscleaning.ca/" style="color:black;" target="_blanck"></a></strong>
 			<p>PWA, pagina empresarial</p>
 			<strong>Canada</strong>
+			<strong><a href="#" style="color:black;" target="_blanck">Visitar</a></strong>
 			</div>
 			</div>
 		</div>
+		<div class="col-lg-4 col-sm-6 single-card-item app">
+			<div class="isotope_item hover-scale">
+			<div class="item-image">
+			<a href="pwa.html"><img src="images/portfolio/image-9.jpg" alt="image" class="img-fluid"/> </a>
+			</div>
+			<div class="item-info">
+			<h4><a href="pwa.html">Savvylatinos</a></h4>
+			<p>PWA, WEBApp</p>
+			<strong>Colombia-USA</strong>
+			<strong><a href="https://savvylatinos.co/" style="color:black;" target="_blanck">Visitar</a></strong>
+
+			</div>
+			</div>
+		</div>
+		<!-- <div class="col-lg-4 col-sm-6 single-card-item app">
+			<div class="isotope_item hover-scale">
+			<div class="item-image">
+			<a href="pwa.html"><img src="images/portfolio/image-9.jpg" alt="image" class="img-fluid"/> </a>
+			</div>
+			<div class="item-info">
+			<h4><a href="pwa.html">Bbevolutionbank</a></h4>
+			<p>PWA, WEBApp</p>
+			<strong>Ecuador</strong>
+			<strong><a href="https://beta.bbevolutionbank.com/" style="color:black;" target="_blanck">Visitar</a></strong>
+
+			</div>
+			</div>
+		</div> -->
 		<div class="col-lg-4 col-sm-6 single-card-item website">
 			<div class="isotope_item hover-scale">
 			<div class="item-image">
@@ -232,48 +234,10 @@
 			<h4><a href="imdris.html" target="_blanck">Imdris</a></h4>
 			<p>Pagina web</p>
 			<strong>Mexico</strong>
+			<strong><a href="#" style="color:black;" target="_blanck"></a></strong>
 			</div>
 			</div>
 		</div>
-		
-		<div class="col-lg-4 col-sm-6 single-card-item website">
-			<div class="isotope_item hover-scale">
-			<div class="item-image">
-			<a href="ventiluz.html"><img src="images/portfolio/ventiluz.jpg" alt="image" class="img-fluid"/> </a>
-			</div>
-			<div class="item-info">
-			<h4><a href="ventiluz.html" target="_blanck">Ventiluz-Servicios</a></h4>
-			<p>Pagina web</p>
-			<strong>Argentina</strong>
-			</div>
-			</div>
-		</div>
-
-		<div class="col-lg-4 col-sm-6 single-card-item website">
-			<div class="isotope_item hover-scale">
-			<div class="item-image">
-			<a href="zanitizing.html"><img src="images/portfolio/image-12.jpg" alt="image" class="img-fluid"/> </a>
-			</div>
-			<div class="item-info">
-			<h4><a href="zanitizing.html" target="_blanck">Zanitizing</a></h4>
-			<p>Pagina web</p>
-			<strong>Mexico</strong>
-			</div>
-			</div>
-		</div>
-		
-		<!-- <div class="col-lg-4 col-sm-6 single-card-item app">
-			<div class="isotope_item hover-scale">
-			<div class="item-image">
-			<a href="pwa.html"><img src="images/portfolio/image-6.jpg" alt="image" class="img-fluid"/> </a>
-			</div>
-			<div class="item-info">
-			<h4><a href="pwa.html">Techos y tabiques Mérida</a></h4>
-			<p>PWA, E-commerce</p>
-			<strong>Venezuela</strong>
-			</div>
-			</div>
-		</div> -->
 		<div class="col-lg-4 col-sm-6 single-card-item app">
 			<div class="isotope_item hover-scale">
 			<div class="item-image">
@@ -283,24 +247,25 @@
 			<h4><a href="pwa.html">CSS CA</a></h4>
 			<p>PWA, E-commerce</p>
 			<strong>Venezuela-USA</strong>
+			<strong><a href="https://www.corpcssca.com" style="color:black;" target="_blanck">Visitar</a></strong>
+
 			</div>
 			</div>
 		</div>
-		
-		
 		<div class="col-lg-4 col-sm-6 single-card-item website">
 			<div class="isotope_item hover-scale">
 			<div class="item-image">
 			<a href="planing.html"><img src="images/portfolio/image1.jpg" alt="image" class="img-fluid"/> </a>
 			</div>
 			<div class="item-info">
-			<h4><a href="planing.html" target="_blanck">PlanningLTDA</a></h4>
+			<h4><a href="planing.html" target="_blanck">FAZSLTDA</a></h4>
 			<p>Pagina web Portafolio profesional</p>
 			<strong>Chile</strong>
+			<strong><a href="https://fazs.cl/" style="color:black;" target="_blanck">Visitar</a></strong>
 			</div>
 			</div>
 		</div>
-		<div class="col-lg-4 col-sm-6 single-card-item graphic">
+		<!-- <div class="col-lg-4 col-sm-6 single-card-item graphic">
 			<div class="isotope_item hover-scale">
 			<div class="item-image">
 			<a href="#"><img src="images/portfolio/app-img2.jpg" alt="image" class="img-fluid"/> </a>
@@ -308,7 +273,7 @@
 			<div class="item-info">
 			<h4>Frutmesuper</h4>
 			<p>Logo</p>
-			<!-- <strong>Chile</strong> -->
+			
 			</div>
 			</div>
 		</div>
@@ -320,7 +285,7 @@
 			<div class="item-info">
 			<h4>Dr. yogur</h4>
 			<p>Logo</p>
-			<!-- <strong>Chile</strong> -->
+			
 			</div>
 			</div>
 		</div>
@@ -332,7 +297,7 @@
 			<div class="item-info">
 			<h4>Dulce momento</h4>
 			<p>Logo</p>
-			<!-- <strong>Chile</strong> -->
+			
 			</div>
 			</div>
 		</div>
@@ -344,7 +309,7 @@
 			<div class="item-info">
 			<h4>Maruma</h4>
 			<p>Logo</p>
-			<!-- <strong>Chile</strong> -->
+			
 			</div>
 			</div>
 		</div>
@@ -356,34 +321,12 @@
 			<div class="item-info">
 			<h4>Ventiluz-servicios</h4>
 			<p>Logo</p>
-			<!-- <strong>Chile</strong> -->
-			</div>
-			</div>
-		</div>
-		<!-- <div class="col-lg-4 col-sm-6 single-card-item  website">
-			<div class="isotope_item hover-scale">
-			<div class="item-image">
-			<a href="jkd.html" target="_blanck"><img src="images/portfolio/jkd.jpg" alt="image" class="img-fluid"/> </a>
-			</div>
-			<div class="item-info">
-			<h4><a href="jkd.html">JKDRotulación</a></h4>
-			<p>Pagina web</p>
-			<strong>España</strong>
 			</div>
 			</div>
 		</div> -->
-		
-		
 </div>
 </div>
 </section>
-<!--End Portfolio-->
-
-<!--Start Footer-->
-
-<!--End Footer-->
-
-<!-- js placed at the end of the document so the pages load faster -->
 <script src="js/vendor/modernizr-3.5.0.min.js"></script>
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.bundle.min.js"></script> 
