--- a/medida.html
+++ b/medida.html
@@ -443,7 +443,7 @@
    </section>
    <!-- Call to Action End -->
 
-   <footer id="tw-footer" class="tw-footer">
+    <footer id="tw-footer" class="tw-footer">
       <div class="container">
          <div class="row">
             <div class="col-md-12 col-lg-4">
@@ -464,10 +464,7 @@
                   <!-- End Social link -->
                </div>
                <!-- End Footer info -->
-               <div class="footer-awarad">
-                  <img src="images/icon/best.png" alt="">
-                  <p>BUCKAPI 2016-2021</p>
-               </div>
+             
             </div>
             <!-- End Col -->
             <div class="col-md-12 col-lg-8">
@@ -519,26 +516,6 @@
                      </div>
                      <!-- End Footer Widget -->
                   </div>
-                  <!-- End col -->
-                  <div class="col-md-12 col-lg-6">
-                     <!-- <div class="footer-widget">
-                        <div class="section-heading">
-                           <h3>Subscribete</h3>
-                           <span class="animate-border border-black"></span>
-                        </div>
-                        <p>Dejanos tu e-mail</p>
-                        <form action="index.html#">
-                           <div class="form-row">
-                              <div class="col tw-footer-form">
-                                 <input type="email" class="form-control" placeholder="Ingresa tu correo">
-                                 <button type="submit"><i class="fa fa-send"></i></button>
-                              </div>
-                           </div>
-                        </form>
-                     </div> -->
-                     <!-- End footer widget -->
-                  </div>
-                  <!-- End Col -->
                </div>
                <!-- End Row -->
             </div>
@@ -552,8 +529,8 @@
       <div class="copyright">
          <div class="container">
             <div class="row">
-               <div class="col-md-12">
-                  <span>Copyright &copy; 2020, Todos los derechos reservados buckapi</span>
+               <div class="col-md-12" style="    text-align: center;">
+                  <span>Copyright &copy; 2022, Todos los derechos reservados buckapi</span>
                </div>
                <!-- End Col -->
                
@@ -567,8 +544,8 @@
       <div id="back-to-top" class="back-to-top">
          <button class="btn btn-dark" title="Back to Top">
             <i class="fa fa-angle-up"></i>
-         </button>
-      </div>
+         </button> 
+      </div> 
    
       <!-- End Back to top -->
 
