--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                      <div class="col-md-6">
                         <div class="slider-content">
                             <h1>Apps, <span>tiendas </span> y páginas web </h1>
-                           <p>Desarrollamos el sitio web que usted necesita</p>
+                           <p>Desarrollamos lo que usted necesita</p>
                            <a href="#tw-service" class="btn btn-primary">¿Que tipo de página web deseas?</a>
                         </div>
                      </div>
@@ -256,11 +256,10 @@
                   <div class="row justify-content-center">
                      <div class="col-md-6">
                         <div class="slider-content">
-                           <h1>Webapp y
-                           <span>PWA</span>
+                           <h1>Webapps y  <span>PWA</span>
                            </h1>
-                           <p>Explore lo mejor de la web y del móvil. Con una PWA para su empresa tendra una pagina web y una aplicación integrada. </p>
-                           <a href="https://wa.me/584147529202?text=Desarrollo!!%20a%20medida20%buckapi" target="_blank"  class="btn btn-primary">¿Como son?</a>
+                           <p>Explore lo mejor de la web y del móvil. </p>
+                           <a href="https://wa.me/584147529202?text=Desarrollo!!%20a%20medida20%buckapi" target="_blank"  class="btn btn-primary">Más información</a>
                         </div>
                      </div>
                      <div class="col-md-5 align-self-center">
