--- a/portafolio/portfolio.html
+++ b/portafolio/portfolio.html
@@ -206,12 +206,12 @@
 			<h4><a href="pwa.html">Savvylatinos</a></h4>
 			<p>PWA, WEBApp</p>
 			<strong>Colombia-USA</strong>
-			<strong><a href="https://savvylatinos.co/" style="color:black;" target="_blanck">Visitar</a></strong>
+			<strong><a href="https://main.dbu4fdf2pvfpn.amplifyapp.com/" style="color:black;" target="_blanck">Visitar</a></strong>
 
 			</div>
 			</div>
 		</div>
-		<!-- <div class="col-lg-4 col-sm-6 single-card-item app">
+		<div class="col-lg-4 col-sm-6 single-card-item app">
 			<div class="isotope_item hover-scale">
 			<div class="item-image">
 			<a href="pwa.html"><img src="images/portfolio/image-9.jpg" alt="image" class="img-fluid"/> </a>
@@ -224,7 +224,7 @@
 
 			</div>
 			</div>
-		</div> -->
+		</div>
 		<div class="col-lg-4 col-sm-6 single-card-item website">
 			<div class="isotope_item hover-scale">
 			<div class="item-image">
