--- a/shop.html
+++ b/shop.html
@@ -58,7 +58,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="t228__centerside t228__menualign_right">
+                        <!-- <div class="t228__centerside t228__menualign_right">
                             <div class="t228__centercontainer">
                                 <ul class="t228__list ">
                                     <li class="t228__list_item" style="padding:0 35px;">
@@ -66,7 +66,7 @@
                                     </li>
                                 </ul>
                             </div>
-                        </div> 
+                        </div> --> 
                         <div class="t228__rightside">
                             <div class="t228__rightcontainer">
                                 <div class="t228__right_buttons">
@@ -189,9 +189,9 @@
                     <div class="t228__centerside t228__menualign_right">
                                 <div class="t228__centercontainer">
                                     <ul class="t228__list ">
-                                        <li class="t228__list_item" style="padding:0 35px;">
+                                        <!-- <li class="t228__list_item" style="padding:0 35px;">
                                             <a class="t-menu__link-item" href="portafolioShop.html" data-menu-submenu-hook="" style="color:#000000;font-size:14px;font-weight:500;font-family:&apos;Poppins&apos;;" data-menu-item-number="1">Tiendas</a>
-                                        </li>
+                                        </li> -->
                                         
                                     </ul>
                                 </div>
