--- a/portafolio/portfolio.html
+++ b/portafolio/portfolio.html
@@ -193,7 +193,7 @@
 			<a href="http://www.legales.com.co/" target="_blanck"><img src="images/portfolio/legales.jpg" alt="image" class="img-fluid"/> </a>
 			</div>
 			<div class="item-info">
-			<h4><a href="biker.html">Legales</a></h4>
+			<h4><a href="http://www.legales.com.co/" target="_black">Legales</a></h4>
 			<p>Pagina web</p>
 			<strong>COLOMBIA</strong>
 			</div>
@@ -202,7 +202,7 @@
 		<div class="col-lg-4 col-sm-6 single-card-item app">
 			<div class="isotope_item hover-scale">
 				<div class="item-image">
-					<a href="https://www.frutmesuper.com/"><img src="images/portfolio/image-11.jpg" alt="portfolio" class="img-fluid"/> </a>
+					<a href="https://www.frutmesuper.com/" target="_black"><img src="images/portfolio/image-11.jpg" alt="portfolio" class="img-fluid"/> </a>
 				</div>
 				<div class="item-info">
 				<h4><a href="https://www.frutmesuper.com/" target="_black">FrutmeSuper</a></h4>
@@ -215,7 +215,7 @@
 		<div class="col-lg-4 col-sm-6 single-card-item app">
 			<div class="isotope_item hover-scale">
 				<div class="item-image">
-					<a href="https://www.motogo.link/"><img src="images/portfolio/motogo.jpg" alt="portfolio" class="img-fluid"/> </a>
+					<a href="https://www.motogo.link/" target="_black"><img src="images/portfolio/motogo.jpg" alt="portfolio" class="img-fluid"/> </a>
 				</div>
 				<div class="item-info">
 				<h4><a href="https://www.motogo.link/" target="_black">MotoGo</a></h4>
@@ -240,7 +240,7 @@
 		<div class="col-lg-4 col-sm-6 single-card-item website">
 			<div class="isotope_item hover-scale">
 			<div class="item-image">
-			<a href="https://brothersremodelinghomes.com/"><img src="images/portfolio/brothers.jpg" alt="image" class="img-fluid"/> </a>
+			<a href="https://brothersremodelinghomes.com/" target="_blanck"><img src="images/portfolio/brothers.jpg" alt="image" class="img-fluid"/> </a>
 			</div>
 			<div class="item-info">
 			<h4><a href="https://brothersremodelinghomes.com/" target="_blanck">Brothers Remodeling Home</a></h4>
@@ -254,10 +254,10 @@
 		<div class="col-lg-4 col-sm-6 single-card-item app">
 			<div class="isotope_item hover-scale">
 			<div class="item-image">
-			<a href="https://www.corpcssca.com/"><img src="images/portfolio/image-9.jpg" alt="image" class="img-fluid"/> </a>
+			<a href="https://www.corpcssca.com/" target="_black"><img src="images/portfolio/image-9.jpg" alt="image" class="img-fluid"/> </a>
 			</div>
 			<div class="item-info">
-			<h4><a href="https://www.corpcssca.com/">CSS CA</a></h4>
+			<h4><a href="https://www.corpcssca.com/" target="_black">CSS CA</a></h4>
 			<p>PWA, E-commerce</p>
 			<strong>Venezuela-USA</strong>
 			</div>
@@ -267,7 +267,7 @@
 		<div class="col-lg-4 col-sm-6 single-card-item website">
 			<div class="isotope_item hover-scale">
 			<div class="item-image">
-			<a href="http://seisel.net/"><img src="images/portfolio/image-2.jpg" alt="image" class="img-fluid"/> </a>
+			<a href="http://seisel.net/" target="_blanck"><img src="images/portfolio/image-2.jpg" alt="image" class="img-fluid"/> </a>
 			</div>
 			<div class="item-info">
 			<h4><a href="http://seisel.net/" target="_blanck">Seisel</a></h4>
@@ -280,7 +280,7 @@
 		<div class="col-lg-4 col-sm-6 single-card-item website">
 			<div class="isotope_item hover-scale">
 			<div class="item-image">
-			<a href="https://www.fazs.cl/"><img src="images/portfolio/image1.jpg" alt="image" class="img-fluid"/> </a>
+			<a href="https://www.fazs.cl/" target="_blanck"><img src="images/portfolio/image1.jpg" alt="image" class="img-fluid"/> </a>
 			</div>
 			<div class="item-info">
 			<h4><a href="https://www.fazs.cl/" target="_blanck">FZAM</a></h4>
